# welfare-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/welfare_agent/: __init__.py  config.py  errors.py  server.py  store.py
src/welfare_agent/clients/: __init__.py  embeddings.py  kakao.py
src/welfare_agent/domain/: __init__.py  matching.py  profile.py  regions.py  schedule.py
src/welfare_agent/ingestion/: __init__.py  client.py  codes.py  enrichment.py  http.py  normalize.py  scheduler.py  sync.py
tests/: test_embeddings.py  test_kakao_client.py  test_server_payloads.py
